HYD-1382 Access to online help needs to be more visible - remove (?) help link at upper right - add help link to main tabbed nav - flip .navigation borders to allow for easy hiding of last nav - prevent backbone from taking over the link by using a .skip_router class to .navigation elements - remove defunct .header_help_link css

--- a/chroma-manager/chroma_ui/static/css/base.css
+++ b/chroma-manager/chroma_ui/static/css/base.css
@@ -653,14 +653,14 @@ html {
 }
 
 ul.navigation li {
-  border-right: 2px solid #ddd;
+  border-left: 2px solid #ddd;
   float:left;
   margin: 0px;
   padding: 0px 3px 0px 3px;
 }
 
-ul.navigation li:last-child {
-  border-right: none;
+ul.navigation li:first-child {
+  border-left: none;
 }
 
 ul.navigation {
